// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date, renders custom styles: base 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "margin": 10,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 8.8,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "blue",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2018"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontFamily": "awardwallet",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.38)",
                  },
                  Object {
                    "fontSize": 18,
                    "lineHeight": 18,
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "rgba(0, 0, 0, 0.38)",
                "fontFamily": "Roboto",
                "fontSize": 15,
              }
            }
          >
            Test hint
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`date, renders custom styles: disabled 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="none"
    style={
      Array [
        Object {
          "margin": 12,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 64,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "borderRadius": 2.220446049250313e-16,
              "position": "absolute",
            },
            Object {
              "borderColor": "rgba(0, 0, 0, 0.12)",
              "borderStyle": "dotted",
              "borderWidth": 1,
              "bottom": 0,
              "left": -1.5,
              "right": -1.5,
              "top": -2,
            },
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 6.400000000000002,
              },
              Object {
                "scale": 1.125,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(204, 41, 78, 1)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          error="Error"
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.12)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2018"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#cc294e",
                "fontFamily": "Roboto",
                "fontSize": 17,
              }
            }
          >
            Error
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`date, renders custom styles: errored 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "margin": 11,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(204, 41, 78, 1)",
          "borderBottomWidth": 2,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 7.600000000000001,
              },
              Object {
                "scale": 1.0625,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(204, 41, 78, 1)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          error="Error"
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "orange",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2018"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontFamily": "awardwallet",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.38)",
                  },
                  Object {
                    "fontSize": 18,
                    "lineHeight": 18,
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#cc294e",
                "fontFamily": "Roboto",
                "fontSize": 16,
              }
            }
          >
            Error
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`date, renders default 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 13.600000000000001,
              },
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2018"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontFamily": "awardwallet",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.38)",
                  },
                  Object {
                    "fontSize": 18,
                    "lineHeight": 18,
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`date, renders disabled 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="none"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 64,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "borderRadius": 2.220446049250313e-16,
              "position": "absolute",
            },
            Object {
              "borderColor": "rgba(0, 0, 0, 0.12)",
              "borderStyle": "dotted",
              "borderWidth": 1,
              "bottom": 0,
              "left": -1.5,
              "right": -1.5,
              "top": -2,
            },
          ]
        }
      />
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 13.600000000000001,
              },
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.122)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.12)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2018"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`date, renders error 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(204, 41, 78, 1)",
          "borderBottomWidth": 2,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 13.600000000000001,
              },
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(204, 41, 78, 1)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          error="This field is required!"
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2018"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontFamily": "awardwallet",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.38)",
                  },
                  Object {
                    "fontSize": 18,
                    "lineHeight": 18,
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#cc294e",
                "fontFamily": "Roboto",
                "fontSize": 12,
              }
            }
          >
            This field is required!
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`date, renders error with hint 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(204, 41, 78, 1)",
          "borderBottomWidth": 2,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 13.600000000000001,
              },
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(204, 41, 78, 1)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          error="This field is required!"
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2018"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontFamily": "awardwallet",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.38)",
                  },
                  Object {
                    "fontSize": 18,
                    "lineHeight": 18,
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#cc294e",
                "fontFamily": "Roboto",
                "fontSize": 12,
              }
            }
          >
            This field is required!
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`date, renders hint 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 13.600000000000001,
              },
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2018"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontFamily": "awardwallet",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.38)",
                  },
                  Object {
                    "fontSize": 18,
                    "lineHeight": 18,
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "rgba(0, 0, 0, 0.38)",
                "fontFamily": "Roboto",
                "fontSize": 12,
              }
            }
          >
            Test hint
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`date, renders not required 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 13.600000000000001,
              },
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2018"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontFamily": "awardwallet",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.38)",
                  },
                  Object {
                    "fontSize": 18,
                    "lineHeight": 18,
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`date, renders required 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 13.600000000000001,
              },
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2018"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontFamily": "awardwallet",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.38)",
                  },
                  Object {
                    "fontSize": 18,
                    "lineHeight": 18,
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`date, renders value 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(0, 0, 0, 0.38)",
          "borderBottomWidth": 0.5,
          "height": 64,
          "paddingBottom": 8,
          "paddingTop": 32,
          "zIndex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": 13.600000000000001,
              },
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.38)",
              "fontFamily": "Roboto",
              "fontSize": 16,
            }
          }
        >
          Date
          <Text
            style={
              Object {
                "color": "#cc294e",
              }
            }
          >
             *
          </Text>
        </Text>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          affixTextStyle={
            Object {
              "fontFamily": "Roboto",
            }
          }
          allowFontScaling={true}
          autoCapitalize="sentences"
          disableFullscreenUI={true}
          editable={false}
          innerRef={[Function]}
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en-US",
              "messages": Object {},
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
          onBlur={[Function]}
          onChange={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          rejectResponderTermination={true}
          renderAccessory={[Function]}
          selectionColor="#146ac4"
          style={
            Array [
              Object {
                "flex": 1,
                "margin": 0,
                "padding": 0,
                "top": 2,
              },
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 16,
                "height": 24,
                "textAlign": "left",
              },
              undefined,
            ]
          }
          textContentType="none"
          theme="light"
          underlineColorAndroid="transparent"
          value="January 1, 2019"
        />
        <View
          style={
            Object {
              "alignSelf": "flex-start",
              "justifyContent": "center",
              "top": 2,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "fontFamily": "awardwallet",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.38)",
                  },
                  Object {
                    "fontSize": 18,
                    "lineHeight": 18,
                  },
                  undefined,
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    />
  </View>
</View>
`;
